--- a/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
@@ -9,7 +9,7 @@
 <h3>Help Window</h3>
 
 <p>A browser for displaying help information on TOPCAT.
-It may well be the window in which you are seeing this text.
+It is probably the window in which you are seeing this text.
 The panel on the left hand side gives a hierarchical 
 view of the available help topics, and the panel on the right hand
 side displays the help text itself.  The bar in between the two
@@ -37,7 +37,7 @@ these windows.
 
 <h4>External URL</h4>
 
-The help browser is an HTML browser and some of the hyperlinks in
+<p>The help browser is an HTML browser and some of the hyperlinks in
 the help document reference documents outside of the help document
 itself.  Selecting these links will go to the external documents.
 When the viewer is displaying an external document, its URL will
