--- a/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
@@ -32,7 +32,7 @@ elsewhere in this help document:
 
 <p><strong>Please note:</strong>
 TOPCAT is a young product under active development,
-and this version is Alpha software.  
+and this version is Beta software.  
 More information about its current state can be found at the
 <a href="http://www.starlink.ac.uk/topcat/">TOPCAT website</a>.
 
