--- a/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
@@ -32,8 +32,9 @@ section describes the I/O capabilities in detail.
 <li>Giving the table location on the command line at startup
 <li>Using the "Open Table" dialogue, which is activated by:
   <ul>
-  <li>The "Open" button (<img src="../images/Open24.gif">) on the toolbar
-  <li>The "Open" item in the File menu
+  <li>The <kbd>Open</kbd> button 
+      (<img src="../images/Open24.gif">) on the toolbar
+  <li>The <kbd>Open</kbd> item in the <kbd>File</kbd> menu
   <li>Starting TOPCAT without a command line argument
   </ul>
 </ul>
@@ -77,8 +78,8 @@ section on <a href="invoke.html">Invoking TOPCAT</a>.
 <p>A table in the viewer can be written out any time using the "Save Table"
 dialogue.  This is activated by:
 <ul>
-<li>The "Save" button (<img src="../images/Save24.gif">) on the toolbar
-<li>The "Save" item in the File menu
+<li>The <kbd>Save</kbd> button (<img src="../images/Save24.gif">) on the toolbar
+<li>The <kbd>Save</kbd> item in the <kbd>File</kbd> menu
 </ul>
 Any changes which have been made to the table will be reflected in the
 table which is written out.  The table which will be saved is the one which
