--- a/topcat/src/resources/uk/ac/starlink/topcat/help/mirage.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/mirage.html
@@ -31,7 +31,7 @@ in effect.
 sometimes Mirage starts up with no data loaded into it.
 In this case you will have to save the data to disk in mirage format
 and start up Mirage separately and load the data in using the 
-"New Dataset" item in Mirage's "Console" menu.
+<kbd>New Dataset</kbd> item in Mirage's <kbd>Console</kbd> menu.
 
 <p>Note that when Mirage has been launched from TOPCAT, exiting Mirage
 or closing its window will exit TOPCAT as well.
