--- a/topcat/src/resources/uk/ac/starlink/topcat/help/param.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/param.html
@@ -8,10 +8,14 @@
 
 <h3>Table Metadata Window</h3>
 
-This window displays any metadata which describes the table as a whole,
+<p>This window displays any metadata which describes the table as a whole,
 for instance its name.  At least the column dimensions will be shown;
 many tables do not have much per-table metadata so this window may
 not be very interesting.
+
+<p>The metadata is displayed in a 
+<a href="windows.html#jtable">JTable</a> widget.
+
 
 </body>
 </html>
