--- a/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
@@ -20,7 +20,7 @@ A marker will only be plotted if both the X and Y values are not blank.
 If more than one subset is being plotted, they will be drawn using
 different markers.  A key on the right hand side indicates the marker
 being used for each subset.  The marker types can be changed using the
-Marker Type item in the Plot menu.
+<kbd>Marker Type</kbd> item in the <kbd>Plot</kbd> menu.
 
 <p>You can zoom in and out of the plot by dragging with the left mouse
 button down and right (zoom in) or up and left (zoom out) - this takes
@@ -28,14 +28,6 @@ a little practice but is easy to use after a couple of goes.
 If you get lost you can push the 
 Rescale button (<img src="../images/4way3.gif">) to return the 
 scaling to normal.
-
-<h4>Row Subset Selection</h4>
-
-You can use the "Subsets to plot" item on the Subsets menu to determine
-which subsets are plotted on the graph.  Different subsets are plotted
-using different markers, so you can see where different groups of results
-lie in relation to each other.
-
 
 <h4>Axis selectors</h4>
 
@@ -52,8 +44,21 @@ Each one consists of two parts:
 <dd>This checkbox can be clicked to toggle whether the axis in question
     is to be plotted logarithmically or not.  If it is logarithmic,
     any negative values are simply ignored (not plotted).
-
 </dl>
+
+<h4>Row Subset Selection</h4>
+
+<p>Below the plot there is a set of checkboxes headed 
+<a href="subsets.html">Row Subsets</a>.
+Click on these to select or deselect which subsets should be plotted in
+this graph.
+Different subsets are plotted
+using different markers, so you can see where different groups of results
+lie in relation to each other.
+
+<p>You can also use the <kbd>Subsets To Plot</kbd> item on the 
+<kbd>Subsets</kbd> menu.
+
 
 <h4>Toolbar</h4>
 
