--- a/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
@@ -16,7 +16,7 @@ of other columns in that row.  You can think of this as providing
 functionality like that of a very primitive column-oriented spreadsheet.
 
 <p>This is done using the Synthetic Column dialogue, which can be
-activated from the Columns menu of the Column Metadata window 
+activated from the <kbd>Columns</kbd> menu of the Column Metadata window 
 or a popup menu got by right clicking on one of the columns in
 the main browser window.
 
