--- a/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
@@ -1,10 +1,15 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
 
 <h3>Statistics Window</h3>
 
 <p>The Statistics Window can display statistics for the values in each
-of the table's columns.  The displayed grid has a row for each 
+of the table's columns.  The calculated values are displayed in a
+<a href="windows.html#jtable">JTable</a> widget with a row for each 
 column in the main table, and a column for each of a number of
 statistical quantities calculated on <a href="#subsets">some or all</a> of 
 the values in the data table column corresponding to that grid row:
@@ -12,14 +17,6 @@ the values in the data table column corresponding to that grid row:
 <dl>
 <dt>Name
 <dd>The name of the column in the main table represented by this grid row.
-
-<dt>Good cells
-<dd>The number of non-blank cells.
-
-<dt>Bad cells
-<dd>The number of blank cells; the sum of
-    this value and the Good cells value will be the same for each
-    column.
 
 <dt>Mean
 <dd>The mean value of the good cells.
@@ -35,6 +32,14 @@ the values in the data table column corresponding to that grid row:
 
 <dt>Maximum
 <dd>As minimum, but shows the largest values.
+
+<dt>Good cells
+<dd>The number of non-blank cells.
+
+<dt>Bad cells
+<dd>The number of blank cells; the sum of
+    this value and the Good cells value will be the same for each
+    column.
 
 </dl>
 
@@ -63,11 +68,12 @@ the main window.
     cached and not normally recalculated again.  
     Use this button if you want to force a recalculation because the
     data may have changed.<br>
-    Also available as the "Recalculate" item on the Statistics menu.
+    Also available as the <kbd>Recalculate</kbd> item on the 
+    <kbd>Statistics</kbd> menu.
 
 <h4>Progress Bar</h4>
 
-For a large table the calculations may take a while.  While they are
+<p>For a large table the calculations may take a while.  While they are
 being performed you can interact with the window as normal, 
 but a progress bar is shown at the bottom of the window.
 If you initiate a new calculation (by pushing the Recalculate button or
