--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -24,12 +24,11 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 </dl>
 
 
-<h3>Version 0.2a</h3>
+<h3>Version 0.3b (4 June 2003)</h3>
 
-<p>Released for the Starlink Summer(?) 2003 CD.
-
-<p>This is alpha software.  It has enough functionality to be useful
-but has not been rigorously tested and needs additional functions,
+<p>This is beta software.  It works reasonably well and 
+has enough functionality to be useful,
+but it has not been rigorously tested and needs additional functions,
 some improvements to the user interface and so on.
 
 
