Some wording changes.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
@@ -69,7 +69,7 @@ section on <a href="invoke.html">Invoking TOPCAT</a>.
 <ul>
 <li><a href="fits-read.html">FITS</a>
 <li><a href="votable-read.html">VOTable</a>
-<li><a href="jdbc-read.html">JDBC</a> (SQL databases)
+<li><a href="jdbc-read.html">SQL Database</a>
 <li><a href="wdc-read.html">WDC</a>
 </ul>
 
@@ -127,7 +127,7 @@ should be output in this case.
 <li><a href="fits-write.html">FITS</a>
 <li><a href="votable-write.html">VOTable</a>
 <li><a href="text-write.html">Text</a>
-<li><a href="jdbc-write.html">JDBC</a> (SQL databases)
+<li><a href="jdbc-write.html">SQL Database</a>
 <li><a href="mirage.html">Mirage</a>
 </ul>
 
