--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-read.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h4>Reading JDBC tables</h4>
+<h4>Reading from SQL Databases</h4>
 
 <p>With appropriate configuration, TOPCAT can be used to examine the
 results of queries on a relational database such as MySQL.
@@ -50,7 +50,7 @@ constructed from certain rows from the table "swaa" in the database
 
 <p>Fortunately you do not have to construct this by hand, there is
 a dialogue box to assist in putting it together.
-You can use this by pressing the "JDBC table" button in the
+You can use this by pressing the "SQL Database" button in the
 "Open Table" dialogue.  This box includes optional username and password
 inputs for establishing the connection with the database.  
 If you do not specify them
