--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
@@ -6,13 +6,13 @@
 <body>
 
 
-<h4>Writing JDBC tables</h4>
+<h4>Writing to SQL Databases</h4>
 
 <p>With appropriate configuration, TOPCAT can write out tables as
 new tables in an SQL-compatible relational database.
 For this to work, you must have write access to a suitable database
 and the drivers must be installed as described in the 
-section about <a href="jdbc-read.html">reading JDBC tables</a>.
+section about <a href="jdbc-read.html">reading from SQL databases</a>.
 
 <p>For writing, the location is specified as the following URL:
 <pre>
@@ -28,7 +28,7 @@ access privileges of user mbt.
 
 <p>Fortunately you do not have to construct this URL by hand, there is
 a dialogue to assist in putting it together.  You can use this by
-pressing the "JDBC Table" button in the "Save Table" dialogue.
+pressing the "SQL Database" button in the "Save Table" dialogue.
 This includes optional username and password inputs for establishing
 the connection with the database.
 If you do not specify them and the database server rejects the 
