Removed documentation of bug which does not in fact exist. Well, I don't think it does.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
@@ -27,11 +27,7 @@ are as follows:
 
 <dt>Expression
 <dd>If the subset has been defined by an algebraic expression, this will be
-    here.  It can be edited to change the expression, 
-    but note this may affect the value of
-    other subsets or synthetic columns which are defined in terms of it 
-    (they may continue to refer to the old value of the expression).
-    This is a misfeature and should be removed in the future.
+    here.  It can be edited to change the expression.
 
 <dt>Column $ID
 <dd>If the subset has been defined by equivalence with a boolean-valued
