--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
@@ -28,7 +28,8 @@ access privileges of user mbt.
 
 <p>Fortunately you do not have to construct this URL by hand, there is
 a dialogue to assist in putting it together.  You can use this by
-pressing the "SQL Database" button in the "Save Table" dialogue.
+pressing the "SQL Database" button in the "Save Table" dialogue
+(this button will be greyed out if no JDBC drivers are installed).
 This includes optional username and password inputs for establishing
 the connection with the database.
 If you do not specify them and the database server rejects the 
