--- a/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
@@ -10,7 +10,7 @@
 <p>As long as a J2SE1.4 Java Runtime Environment is present, 
 TOPCAT should run in environments other than Unix, though the supplied
 startup script is unlikely to work.  In this case you can probably
-invoke the Jar file <tt>lib/topcat/tocpat.jar</tt> file directly,
+invoke the Jar file <tt>starjava/lib/topcat/topcat.jar</tt> file directly,
 for instance by clicking on it or by typing something like 
 <pre>
    java -jar topcat.jar [args]
@@ -23,16 +23,16 @@ available.
 
 <p>For more control over the classpath it can be invoked as
 <pre>
-   java -classpath lib/topcat/topcat.jar \
+   java -classpath starjava/lib/topcat/topcat.jar \
         uk.ac.starlink.topcat.TableViewer
 </pre>
-The <tt>bin/topcat</tt> script mentioned above can be examined 
+The <tt>starjava/bin/topcat</tt> script mentioned above can be examined 
 for examples of fine tuning of the invocation.
 
 <p>The same comments apply if you have downloaded the standalone 
 TOPCAT jar file <tt>topcat-full.jar</tt> - 
 just use "<tt>wherever/topcat-full.jar</tt>"
-rather than "<tt>lib/topcat/topcat.jar</tt>"
+rather than "<tt>starjava/lib/topcat/topcat.jar</tt>"
 in the above examples.
 
 </body>
