--- a/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
@@ -9,7 +9,7 @@
 <h3>Columns Window</h3>
 
 <p>The Columns Window displays a <a href="windows.html#jtable">JTable</a> 
-giving all the information
+giving all the information (<dfn>metadata</dfn>)
 known about each column in the main data table.  It may take a little bit
 of getting used to, since each <em>column</em> in the main data table
 is represented by a <em>row</em> in the JTable displayed here.
@@ -17,9 +17,23 @@ The order and widths of the columns of JTable widget can be
 changed in the same way as those for the browser window JTable, 
 but this has no effect on the data.
 
+<p>Each column in the displayed JTable corresponds to one category
+of metadata for the columns in the main data table - their names, 
+descriptions, UCDs etc.
+Tables of different types (e.g. ones read from different input formats) 
+can have different categories of metadata.  By default a metadata
+category is displayed in this JTable if at least one 
+table column has a non-blank
+value for that metadata category, so for instance if no table columns
+have a defined UCD then the UCD column will not appear.  
+Categories can be made to appear and disappear however by using the
+<kbd>Display</kbd> menu.  They can also be moved by dragging their
+headers around as usual.
+
 <p>The order in which the rows of this JTable are presented 
 is the same as the order in which the columns appear in the
-browser window.
+browser window.  If the columns are moved around in the browser
+window, the corresponding rows will move around in this window.
 
 <h4>Toolbar</h4>
 
@@ -29,6 +43,8 @@ browser window.
 <dt><img src="../images/Plus1.gif">New Synthetic Column
 <dd>This allows you to add a new column based on the existing ones - 
     see the section on <a href="synthetic.html">Synthetic columns</a>.
+    The new column will be added by default after the last selected
+    column in the JTable, or at the end if none is selected.
     Also available as the <kbd>New Synthetic Column</kbd> item in the
     <kbd>Columns</kbd> menu.
 
@@ -44,7 +60,7 @@ browser window.
 
 <h4>Menus</h4>
 
-<p>The following items appear in the <kbd>Columns</kbd> menu:
+<p>The <kbd>Columns</kbd> menu contains the following items:
 
 <dl>
 <dt>Sort selected up
@@ -57,7 +73,15 @@ browser window.
 
 </dl>
 
-<h4>Editing metadata</h4>
+<p>The <kbd>Display</kbd> menu lists all the columns metadata categories
+which are available.  Each of these categories is displayed as a column
+in this window's JTable.  By default only columns which have a
+non-blank entry for at least one table column are shown, but you
+can change this by selecting or deselecting the checkboxes in this
+menu.
+
+
+<h4>Editing Metadata</h4>
 
 Some of the metadata items in the JTable can be edited.  
 Double-click in the cell you wish to edit, and if a text cursor shows
@@ -69,9 +93,10 @@ Press return to confirm the edit when you have finished.
 <p>For each column in the data table (each line in the displayed JTable) 
 items of information such as
 column name, description, UCD etc are given.
-Exactly which items are shown will depend on the kind of table 
-in the viewer and how much metadata it has.
-Some of the items are these:
+As explained above, by default these will only be displayed if
+they contain some non-blank entries.  Additional items may be
+displayed as appropriate for the specific kind of table.
+The standard metadata categories are as follows:
 <dl>
 
 <dt>Index
@@ -82,6 +107,16 @@ Some of the items are these:
 
 <dt>Name
 <dd>The name of the column.
+
+<dt>$ID
+<dd>A unique and unchanging ID value for each column.   These are useful
+    in defining expressions for synthetic columns, since they are
+    guaranteed unique for each column.  Although the column Name can
+    be used as well, the Name may not be unique and may not have the
+    correct form for use in an algebraic expression.
+    Initially, the Index value and the $ID value will match each other
+    (except the $ID is preceded by a '$' character) but if columns are
+    moved, added or deleted they will no longer match.
 
 <dt>Class
 <dd>The Java class of the items in that column.  You don't have to know 
@@ -103,6 +138,12 @@ Some of the items are these:
 <dt>Units
 <dd>The units in which quantities in this column are expressed.
 
+<dt>Expression
+<dd>The algebraic expression defining the values in this column.
+    This will only be filled in if the column in question is a 
+    synthetic column which you have added, rather than one present in
+    the data in its original loaded form.
+
 <dt>Description
 <dd>A textual description of the function of this column.
 
@@ -112,21 +153,9 @@ Some of the items are these:
     Content Descriptors</a>, and indicate the semantics
     of the values in this column.
 
-<dt>Expression
-<dd>The algebraic expression defining the values in this column.
-    This will only be filled in if the column in question is a 
-    synthetic column which you have added, rather than one present in
-    the data in its original loaded form.
-
-<dt>$ID
-<dd>A unique and unchanging ID value for each column.   These are useful
-    in defining expressions for synthetic columns, since they are
-    guaranteed unique for each column.  Although the column Name can
-    be used as well, the Name may not be unique and may not have the
-    correct form for use in an algebraic expression.
-    Initially, the Index value and the $ID value will match each other
-    (except the $ID is preceded by a '$' character) but if columns are
-    moved, added or deleted they will no longer match.
+<dt>UCD Description
+<dd>If the string in the UCD column is the identifier of a known UCD,
+    the standard description associated with that UCD is shown here.
 
 </dl>
 
